@@ -36,3 +36,43 @@ seq_reset|1|1|1
 robust.1|E1|N3
 robust.2|t|t
 Topology 'city_data' dropped
+---
+#5795|Regression test starting
+#5795|Create t5795
+#5795|N1
+#5795|N2
+#5795|E1
+#5795|E2
+#5795|N3
+#5795|E2|3|-4|1|0
+#5795|E3|4|-2|1|0
+#5795|E4|2|-3|1|0
+#5795|N4
+#5795|E2|3|-6|1|0
+#5795|E3|5|-2|1|0
+#5795|E5|6|-3|1|0
+#5795|E6|2|-5|1|0
+#5795|E7
+#5795|E2|3|-6|3|0
+#5795|E3|7|-2|3|0
+#5795|E5|-7|-3|2|0
+#5795|E6|2|-5|3|0
+#5795|E7|6|5|3|2
+#5795|N5
+#5795|E2|3|-6|3|0
+#5795|E3|8|-2|3|0
+#5795|E5|-9|-3|2|0
+#5795|E6|2|-5|3|0
+#5795|E8|9|5|3|2
+#5795|E9|6|-8|3|2
+#5795|N6
+#5795|E2|3|-6|3|0
+#5795|E3|8|-2|3|0
+#5795|E6|2|-11|3|0
+#5795|E8|9|10|3|2
+#5795|E9|6|-8|3|2
+#5795|E10|11|-3|2|0
+#5795|E11|-9|-10|2|0
+#5795|E12
+#5795|Drop t5795
+#5795|Regression test finished
